# textgame-io

./: .gitignore  Dockerfile.client  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yaml
examples/echo-game/: client.py  server.py
protocol/: spec.md
src/textgame_io/: __init__.py  __main__.py  admin.py  cli.py  client.py  messages.py  server.py
src/textgame_io/adapters/: terminal.py
src/textgame_io/static/: index.html  manifest.json  sw.js
tests/: test_admin.py  test_messages.py  test_server.py
