[project]
name = "textgame-io"
version = "0.1.0"
description = "Protocol and SDKs for connecting text game servers to any chat client"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "websockets>=12.0",
    "uvicorn>=0.30",
    "starlette>=0.38",
]

[project.optional-dependencies]
terminal = ["rich>=13.0"]
telegram = ["python-telegram-bot>=21.0"]
dev = ["pytest>=9.0", "pytest-asyncio>=1.0", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/textgame_io"]
